2004-06-14  Pino Toscano <toscano.pino@tiscali.it>

       * Add arc-line intersection type.

2004-06-13  Pino Toscano <toscano.pino@tiscali.it>

	* Add the possibility to attach a label ( and to a point, of
	course :) ) to a vector. This because now VectorImp inherits
	CurveImp.

	* Make types modifiable through types dialog. The system is not
	complete, because at the moment there is no way to update the UI.

	* The user now can choose manually the zoom area.

	* Get rid of the Invisible coordinate system; now there are two
	actions ( Show Grid and Show Axes ) to show/hide grid and axes
	separately. I think this is a better way: the Invisible coordinate
	system did not allow to work with polar coordinates and no grid.

2004-06-11  Dominique Devriese  <devriese@kde.org>

	* Some improvements by me to Pino's object names code.  Mostly,
	this includes cleaning the design a bit, and adding support for
	the names in some places.

2004-05-31  Dominique Devriese  <devriese@kde.org>

	* Fix some memory leaks found by valgrind.

2004-05-30  Dominique Devriese  <devriese@kde.org>

	* implement usetexts and select statements for builtin macro's

	* Show a text in the statusbar describing what we want the user to
	select, in ConstructMode.

	* Add an example of a cubic constructed as a locus.

	* Clean the status bar text on time in ConstructMode and
	TestConstructMode.

	* Make SetCoordinateSystemAction into a KSelectAction, so the user
	can see what kind of coordinate system he's currently using.

	* Some tuning of the UI: move Transformations and Tests menu into
	the Objects menu because the menubar was getting too crowded.

2004-05-29  Dominique Devriese  <devriese@kde.org>

	* Fix a crash related to a locus containing some invalid points,
	and added the offending test file in filters/tests.

	* Fix some --enable-final problems in the filters/ directory.

2004-05-28  Dominique Devriese  <devriese@kde.org>

	* Add a test file "testalotofeverything.kig"
