@@ -300,9 +300,8 @@ void ConicConicIntersectionConstructor::drawprelim( const ObjectDrawer& drawer, 
     {
       for ( int wi = -1; wi < 2; wi += 2 )
       {
-        bool ok2 = true;
-        Coordinate c = calcConicLineIntersect( conica, radical, 0.0, wi, ok2 );
-        if ( ok2 ) {
+        Coordinate c = calcConicLineIntersect( conica, radical, 0.0, wi );
+        if ( c.valid() ) {
           PointImp pi( c );
           drawer.draw( pi, p, true );
         }
